--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://wallpapers.com/images/featured/y9lfr2ipvrb9ggr8.jpg');
+    --background: url('https://images3.alphacoders.com/111/1116286.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
