--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://images3.alphacoders.com/111/1116286.jpg');
+    --background: url('https://i.pinimg.com/originals/17/72/96/177296056f1487a414c2a5c7f104e509.png');
     --activetext-colour: white;
 
     --primary1-colour: red;
