--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://i.pinimg.com/originals/17/72/96/177296056f1487a414c2a5c7f104e509.png');
+    --background: url('https://w0.peakpx.com/wallpaper/735/163/HD-wallpaper-gojo-satoru-anime-cool-gojou-itadori-yuji-jujutsu-jujutsu-kaisen-kaisen-manga.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
